eks/hs/mini-msa/k8s/base/core-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: mini-msa-app
  labels:
    app: core-service
spec:
  type: NodePort
  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30002
      protocol: TCP
      name: http
  selector:
    app: core-service
